--- a/style/main.css
+++ b/style/main.css
@@ -1094,30 +1094,41 @@ hr {
   flex: 1;
 }
 
-.seo-content {
+.game-info {
   margin-top: 30px;
   padding-top: 20px;
   border-top: 2px solid #f0f;
 }
 
-.seo-content h3 {
+.game-info h2 {
+  color: #f0f;
+  font-size: 22px;
+  margin-bottom: 15px;
+  margin-top: 25px;
+}
+
+.game-info h2:first-child {
+  margin-top: 0;
+}
+
+.game-info h3 {
   color: #f0f;
   font-size: 20px;
   margin-bottom: 10px;
 }
 
-.seo-content p {
+.game-info p {
   margin-bottom: 15px;
   line-height: 1.6;
   color: #555;
 }
 
-.seo-content ul {
+.game-info ul {
   margin-bottom: 15px;
   padding-left: 20px;
 }
 
-.seo-content li {
+.game-info li {
   margin-bottom: 5px;
   color: #555;
 }
@@ -1148,12 +1159,21 @@ hr {
     margin-left: 10px;
   }
   
-  .seo-content h3 {
+  .game-info h2 {
     font-size: 18px;
+    margin-top: 20px;
   }
   
-  .seo-content p,
-  .seo-content li {
+  .game-info h2:first-child {
+    margin-top: 0;
+  }
+  
+  .game-info h3 {
+    font-size: 16px;
+  }
+  
+  .game-info p,
+  .game-info li {
     font-size: 14px;
   }
 }
